Restructured file system and fixed scrollbars from acting improperly

--- a/css/blog.css
+++ b/css/blog.css
@@ -37,6 +37,11 @@
 		}
 		
 	}
+	body{
+
+		overflow-x: hidden; 
+
+	}
 	ul{
 	
 	list-style-type: none;
