--- a/css/blogPosts.css
+++ b/css/blogPosts.css
@@ -37,6 +37,12 @@
 		}
 		
 	}
+
+	body{
+
+		overflow-x: hidden; 
+
+	}
 	ul{
 	
 	list-style-type: none;
